# electronic-money-token

./: .editorconfig  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml
access-control/: Cargo.toml  Makefile
access-control/src/: lib.rs  state.rs
access-control/tests/: admins.rs  general.rs  operators.rs  owners.rs
access-control/tests/common/: instantiate.rs  mod.rs
allowlist/: Cargo.toml  Makefile
allowlist/src/: lib.rs  state.rs
allowlist/tests/: allowlist.rs  instantiate.rs  token.rs
contract/: Cargo.toml  Makefile
contract/src/: lib.rs
contract/tests/: instantiate.rs  token.rs
core/: Cargo.toml
core/src/: access_control.rs  allowlist.rs  error.rs  governance.rs  lib.rs  sanctions.rs  token.rs
core/src/access_control/: error.rs  events.rs  signature_messages.rs
core/src/allowlist/: error.rs  events.rs
core/src/governance/: error.rs  events.rs  signature_messages.rs
core/src/token/: account.rs  admin_management.rs  error.rs  events.rs  governance.rs  sanctions.rs  supply_management.rs
governance/: Cargo.toml  Makefile
governance/src/: error.rs  lib.rs  state.rs
governance/tests/: general.rs  governance.rs  instantiate.rs  operators.rs  owners.rs
governance/tests/common/: instantiate.rs  mod.rs
tests/: Cargo.toml
tests/contract/: Cargo.toml
tests/contract/src/: lib.rs
tests/holder/: Cargo.toml
tests/holder/src/: lib.rs
tests/src/: genesis.rs  lib.rs  main.rs  network.rs  token.rs  utils.rs
tests/src/common/: mod.rs  network.rs  session.rs  utils.rs
token/: Cargo.toml  Makefile
token/src/: lib.rs  utils.rs
token/tests/: instantiate.rs  token.rs
types/: Cargo.toml
types/src/: admin_management.rs  governance.rs  lib.rs  ownership.rs  sanctions.rs  supply_management.rs  token.rs
types/src/token/: account.rs
