[workspace]
resolver = "2"
members = [
	"core",
	"token",
	"governance",
	"tests",
	"tests/holder"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
emt-core = { path = "./core", version = "=0.1.0" }
emt-tests = { path = "./tests/" }

dusk-bytes = "0.1"

dusk-core = { version = "1.1.0", default-features = false }
dusk-vm = { version = "1.1.0", default-features = false }

bytecheck = { version = "0.6.12", default-features = false }
rkyv = { version = "0.7.39", default-features = false, features = [
	"size_32",
	"alloc",
	"validation",
] }
rand = { version = "0.8.5", default-features = false }
dusk-forge = { version = "0.1.0", default-features = false }
