[package]
name = "emt-core"
version.workspace = true
edition.workspace = true

[dependencies]
dusk-core = { workspace = true }

bytecheck = { workspace = true }
rkyv = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
dusk-core = { workspace = true, features = ["abi-dlmalloc"] }
