[package]
name = "emt-governance"
version.workspace = true
edition.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
dusk-core = { workspace = true, features = ["abi-dlmalloc"] }
emt-core = { workspace = true }
dusk-bytes = { workspace = true }

[dev-dependencies]
emt-tests = { workspace = true }
emt-core = { workspace = true }
dusk-bytes = { workspace = true }
dusk-core = { workspace = true }
dusk-vm = { workspace = true }
rkyv = { workspace = true }
bytecheck = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }

[lib]
crate-type = ["cdylib"]
