[package]
name = "emt-tests"
version.workspace = true
edition.workspace = true

publish = false

[dependencies]
emt-core = { workspace = true }

dusk-core = { workspace = true }
dusk-vm = { workspace = true }

bytecheck = { workspace = true }
rkyv = { workspace = true }

rand = { workspace = true }
