[package]
name = "emt-token"
version.workspace = true
edition.workspace = true

[dependencies]
emt-core = { workspace = true }
dusk-core = { workspace = true }
dusk-forge = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
dusk-core = { workspace = true, features = ["abi-dlmalloc"] }

[dev-dependencies]
emt-tests = { workspace = true }
dusk-vm = { workspace = true }
rkyv = { workspace = true }
bytecheck = { workspace = true }
rand = { workspace = true }

[lib]
crate-type = ["cdylib"]
